Bug 9971 - response level 3 for RPC DrsDomainControllerInfo is not supported
Summary: response level 3 for RPC DrsDomainControllerInfo is not supported
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.0
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.0.6
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-26 23:08 UTC by Matthieu Patou
Modified: 2016-07-25 10:18 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthieu Patou 2013-06-26 23:08:11 UTC
Windows 2008 has added support for this query but we still report UNKNOWN_LEVEL
Comment 1 Garming Sam 2016-07-25 08:54:56 UTC
Fixed in commit 1fd7c28d5fb575e75b5085e8589aef2525c8e784